force-app/main/default/objects/AppointmentException__c/AppointmentException__c.object-meta.xml
<CustomObject>
    <label>Appointment Exception</label>
    <nameField>
        <displayFormat>AE-{00000}</displayFormat>
        <label>Appointment Exception Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Appointment Exceptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>