force-app/main/default/objects/AppointmentException__c/fields/TimeSlots__c.field-meta.xml
<CustomField>
    <fullName>TimeSlots__c</fullName>
    <label>Time Slots</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AvailableTimeSlot</valueSetName>
    </valueSet>
</CustomField>