force-app/main/default/objects/AppointmentException__c/validationRules/BlockApplicationExceptionOnInvalidDate.validationRule-meta.xml
<ValidationRule>
    <fullName>BlockApplicationExceptionOnInvalidDate</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
    AND(
        ISPICKVAL(Type__c, &quot;Available&quot;),
        MOD(Date__c - DATE(1900, 1, 7), 7) &gt; 1
    ),
    AND(
        ISPICKVAL(Type__c, &quot;Block&quot;),
        MOD(Date__c - DATE(1900, 1, 7), 7) &lt; 2
    )
)</errorConditionFormula>
    <errorMessage>Date inside the range</errorMessage>
</ValidationRule>